--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.17
-	yarn_mappings=1.17+build.1
-	loader_version=0.11.3
+	minecraft_version=1.18.1
+	yarn_mappings=1.18.1+build.12
+	loader_version=0.12.8
 
 # Mod Properties
-	mod_version = 1.17.1
+	mod_version = BETA2.0.0
 	maven_group = com.limeshulkerbox
-	archives_base_name = youre-a-fish-now
+	archives_base_name = youreafishnow
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api (or https://fabricmc.net/versions.html)
-	fabric_version=0.34.9+1.17
+	fabric_version=0.45.0+1.18
