--- a/src/main/resources/youreafishnow.mixins.json
+++ b/src/main/resources/youreafishnow.mixins.json
@@ -4,7 +4,7 @@
   "package": "com.limeshulkerbox.youreafishnow.mixin",
   "compatibilityLevel": "JAVA_16",
   "mixins": [
-    "CanBreatheInWaterMixin",
+    "PlayerEntityMixin",
     "ChangeBreakSpeedMixin",
     "ChangeFogDistanceMixin",
     "RenderBubblesMixin",
