--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,14 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-# Fabric Properties
-	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.18.2
-	yarn_mappings=1.18.2+build.3
-	loader_version=0.13.3
 # Mod Properties
-	mod_version = BETA2.0.0
-	maven_group = com.limeshulkerbox
+	mod_version = 2.0.0
+	maven_group = dev.pieman
 	archives_base_name = youreafishnow
 
-# Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api (or https://fabricmc.net/versions.html)
-	fabric_version=0.51.0+1.18.2
+	minecraft_version=1.19.2
+	yarn_mappings=1.19.2+build.28
+	loader_version=0.14.13
+
+	#Fabric api
+	fabric_version=0.73.0+1.19.2
